--- a/src/css/components/hero.css
+++ b/src/css/components/hero.css
@@ -1,17 +1,39 @@
 .hero {
-  color: red;
+  color: white;
   position: relative;
+  background-image: url("/images/coffee.jpg");
+  height: 65vh;
+  background-repeat: no-repeat;
+}
+
+.hero-nav {
+  position: absolute;
+  width:100%;
+  display: flex;
+}
+
+.hero-logo {
+  padding: 62,5% 0;
 }
 
 .hero-title {
   position: absolute;
-  top: 50%;
+  top: 38%;
   right: 50%;
   transform: translate(50%,-50%);
   z-index: 10;
+  font-weight: var(h-font-weight);
+}
+
+.hero-subtitle {
+  position: absolute;
+  top: 55%;
+  right: 50%;
+  transform: translate(50%,-50%);
+  z-index: 10;
+  font-weight: 900;
 }
 
 .hero-img {
-  filter: grayscale(50%);
   z-index: 5;
 }
