--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,7 +1,20 @@
 :root {
   /* Colors */
-  --div-color: red;
+  --div-color: white;
+  --white: #FFFFFF;
+  --anthrazit: #1A1A1A;
+  --beige: #D7BE9D;
+  --petrol: #006D7E;
+  --rosa: #EDD1C9;
+  --orange: #D77C12;
+  --medium-grey: #737373;
+  --light-grey: #E9E9E9;
+
+
 
   /* Text Styles */
   --h2-font-size: 26px;
+  --h-font-weight:900;
+  --h-line-hight:1.1%;
+  --p-line-height:1.3%;
 }
