--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -13,7 +13,7 @@
 
 
   /* Text Styles */
-  --h2-font-size: 26px;
+  --h2-font-size: 3rem;
   --h-font-weight:900;
   --h-line-hight:1.1%;
   --p-line-height:1.3%;
