--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,4 +4,6 @@
 @import "components/info.css";
 @import "components/sorten.css";
 @import "components/footer.css";
+@import "components/inhalt.css";
+@import "components/menue.css";
 
